[package]
name = "letslearnrust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.17", default-features = false }
redis = { version = "0.21.2", features = ["tokio-comp"] }
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.1"
