[package]
name = "letslearnrust"
version = "0.1.0"
edition = "2018"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
futures = { version = "0.3.28", default-features = false }
redis = { version = "0.23.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
warp = "0.3.5"
